gitops_gitlab/apps/api/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-search
  namespace: iplus
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, OPTIONS, DELETE, PUT"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://apisearch-demo.hasti.co"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Accept,Authorization,Cache-Control,Content-Type,Range,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With,X-Mx-ReqToken,client-name,client-version"   
    nginx.ingress.kubernetes.io/cors-max-age: '1728000'
    nginx.ingress.kubernetes.io/cors-expose-headers: "Content-Length,Content-Range"  
spec:
  ingressClassName: nginx
  rules:
  - host: apisearch.hasti.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-search
            port:
              number: 3001
  tls:
  - hosts:
    - apisearch.hasti.co
    secretName: hasti-tls
